# Coretas-Ads-Dashboard

./: README.md  justfile
backend/: .env.example  .gitignore  app.py  config.py  database.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: dependencies.py  routes.py
backend/models/: __init__.py  campaign.py  metric.py
backend/repositories/: __init__.py  campaign_repository.py  metric_repository.py
backend/schemas/: __init__.py  campaign.py  plan.py
backend/services/: __init__.py  amazon_service.py  campaign_execution_service.py  google_service.py  meta_service.py  plan_service.py
backend/utils/: __init__.py  errors.py  logger.py  retry.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppHeader.tsx  AppSidebar.tsx  LandingFooter.tsx  LandingHero.tsx  LandingNav.tsx  MetricCard.tsx  ThemeToggle.tsx
frontend/src/components/ui/: select.tsx  sidebar.tsx
frontend/src/features/campaigns/components/: CampaignFiltersDialog.tsx  CampaignMetrics.tsx  CampaignSearchBar.tsx  CampaignTable.tsx  CampaignTableCard.tsx  CreateCampaignModal.tsx  DashboardHeader.tsx  PlatformIcon.tsx  StatusBadge.tsx  index.ts
frontend/src/hooks/: use-campaigns.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: mockData.ts  routes.ts  schema.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  index.ts
