[tool.poetry]
name = "coretas-backend"
version = "0.1.0"
description = "Coretas Dashboard-First Auto-Builder Backend"
packages = [
    { include = "api" },
    { include = "models" },
    { include = "repositories" },
    { include = "schemas" },
    { include = "services" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
pydantic = ">=2.5.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
